Replaced Integer#valueOf() with new Integer() in order to compile on Java 1.4